--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/redux-actions": "^2.2.4",
+    "bootstrap": "^4.1.0",
+    "immutable": "^3.8.2",
     "prettier-eslint": "^8.8.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.15.1",
-    "redux": "^3.7.2"
+    "reactstrap": "^5.0.0",
+    "redux": "^3.7.2",
+    "redux-actions": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -21,6 +27,9 @@
     "@types/node": "^9.6.5",
     "@types/react": "^16.3.10",
     "@types/react-dom": "^16.0.5",
+    "@types/react-redux": "^5.0.16",
+    "@types/react-router-dom": "^4.2.6",
+    "@types/reactstrap": "^5.0.21",
     "tslint-config-prettier": "^1.10.0",
     "typescript": "^2.8.1"
   }
