--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
+# Server node_modules
+/server/node_modules
+
 # dependencies
 /node_modules
 
