--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/redux-actions": "^2.2.4",
     "bootstrap": "^4.1.0",
     "immutable": "^3.8.2",
     "prettier-eslint": "^8.8.1",
@@ -14,7 +13,8 @@
     "react-scripts-ts": "2.15.1",
     "reactstrap": "^5.0.0",
     "redux": "^3.7.2",
-    "redux-actions": "^2.3.0"
+    "redux-actions": "^2.3.0",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -30,6 +30,7 @@
     "@types/react-redux": "^5.0.16",
     "@types/react-router-dom": "^4.2.6",
     "@types/reactstrap": "^5.0.21",
+    "@types/redux-actions": "^2.2.4",
     "tslint-config-prettier": "^1.10.0",
     "typescript": "^2.8.1"
   }
